All_Component_DX/force-app/main/default/objects/SM_User_Preferences__c/SM_User_Preferences__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Object to store user configured columns for IB tree view.</description>
    <label>User Preference</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>User Preferences Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>