All_Component_DX/force-app/main/default/objects/SM_User_Preferences__c/fields/SM_Configured_Columns__c.field-meta.xml
<CustomField>
    <fullName>SM_Configured_Columns__c</fullName>
    <description>Configured columns ad JSON.</description>
    <label>Configured Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>