All_Component_DX/force-app/main/default/objects/SM_User_Preferences__c/fields/SM_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Type__c</fullName>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>