All_Component_DX/force-app/main/default/objects/SM_User_Preferences__c/fields/SM_User_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_User_Reference_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to User id.</description>
    <label>User Reference Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>